# seqan3_cmake_error

./: CMakeLists.txt
include/: segment.hpp  traversal.hpp
src/: CMakeLists.txt  main.cpp  segment.cpp  traversal.cpp
test/: test_fail.fa  test_pass.fa
